--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+mypy==1.5.1
+mypy-extensions==1.0.0
 numpy==1.26.0
 pandas==2.1.1
+pandas-stubs==2.1.1.230928
 python-dateutil==2.8.2
 pytz==2023.3.post1
+PyYAML==6.0.1
 six==1.16.0
+tomli==2.0.1
+types-pytz==2023.3.1.1
+typing_extensions==4.8.0
 tzdata==2023.3
