--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
-mypy==1.5.1
-mypy-extensions==1.0.0
-numpy==1.26.0
+attrs==23.1.0
+certifi==2023.7.22
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+contourpy==1.1.1
+cycler==0.12.1
+fiona==1.9.5
+fonttools==4.43.1
+geopandas==0.14.0
+kiwisolver==1.4.5
+matplotlib==3.8.0
+numpy==1.26.1
+packaging==23.2
 pandas==2.1.1
-pandas-stubs==2.1.1.230928
+Pillow==10.1.0
+pyparsing==3.1.1
+pyproj==3.6.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
+shapely==2.0.2
 six==1.16.0
-tomli==2.0.1
-types-pytz==2023.3.1.1
-typing_extensions==4.8.0
 tzdata==2023.3
